Footer gap fix

--- a/Shared/Footer.razor.css
+++ b/Shared/Footer.razor.css
@@ -10,6 +10,7 @@ h5 {
 
 .footer-top {
     width: 100%;
+    margin-bottom: -0.125rem;
 }
 
 .footer-bot {
